카운트, 혼잡도 화면 별도 구현

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,9 @@
 <body>
     <h1>People Counter and Tracker</h1>
     <div class="nav">
-        <a href="/">People Counter</a>
-        <a href="/area_feed" target='_blank'>Person Area Ratio</a>
+        <a href="/">HOME</a>
+        <a href="/count_view">People Counter</a>
+        <a href="/area_view">Person Area Ratio</a>
     </div>
-    <img id="live-feed" class="video-feed" src="/video_feed" alt="Live feed">
 </body>
 </html>
