1차 데모 구현 - 무대 현황

--- a/templates/area_view.html
+++ b/templates/area_view.html
@@ -36,6 +36,7 @@
         <a href="/">HOME</a>
         <a href="/count_view">People Counter</a>
         <a href="/area_view">Person Area Ratio</a>
+        <a href="/map_view">demo map view</a>
     </div>
     <div id="ratio-output">Loading...</div>
     <img id="area-feed" class="video-feed" src="/area_feed" alt="Area feed">
