--- a/templates/map_view.html
+++ b/templates/map_view.html
@@ -14,7 +14,11 @@
             } else {
                 div.style.display = "none"; // div 숨기기
             }
-    }
+        }
+        function alertClick() {
+            const div = document.querySelector(".v659_1332");
+            div.style.display = "none"; // div 숨기기
+        }
     </script>
     <!-- progress bar style -->
     <style>
@@ -66,16 +70,11 @@
         <div class="name"></div>
         <div class="v659_2116">
             <div class="v659_1038">
-                <div class="v659_1039">
-                    <div class="v659_1040"></div>
-                    <div class="v659_1041"></div>
-                    <div class="v659_1042">
-                        <div class="v659_1043"></div>
-                        <div class="v659_1044"></div>
-                    </div>
-                </div><span class="v659_1045">푸드코트</span>
+                <div class="v659_1039"></div>
+                <span class="v659_1045">푸드코트</span>
             </div>
         </div>
+        <!-- my position mark -->
         <div class="v659_1047">
             <div class="v659_1048">
                 <div class="v659_1049"></div>
@@ -85,13 +84,8 @@
         </div>
         <div class="v659_2115">
             <div class="v659_1052">
-                <div class="v659_1053">
-                    <div class="v659_1054"></div>
-                    <div class="v659_1055"></div>
-                    <div class="v659_1056">
-                        <div class="name"></div>
-                    </div>
-                </div><span class="v659_1060">티켓부스&이벤트존</span>
+                <div class="v659_1053"></div>
+                <span class="v659_1060">티켓부스&이벤트존</span>
             </div>
         </div>
         <div class="v659_1114"> <!-- info popup -->
@@ -100,12 +94,11 @@
             <span class="v659_1117">공연중</span>
             <span class="v659_1118">MAY FOREST :</span>
             <span id="ratio-info-label" class="v659_1119">여유</span>
-            <div class="v659_1120"> <!-- new tab button -->
-                <a href="/map_view_info" style="text-decoration: none;">
-                    <div class="v659_1121"></div>
-                    <div class="v659_1122"></div>
-                </a>
-            </div>
+            <!-- new tab button -->
+            <a href="/map_view_info" style="text-decoration: none;">
+                <div class="v659_1120">
+                </div>
+            </a>
             <!-- progress bar -->
             <div class="v659_1123">
                 <div class="progress-container">
@@ -163,16 +156,7 @@
                 </script>
             </div>
         </div>
-        <div class="v659_1130">
-            <div class="v659_1131"></div>
-            <div class="v659_1132">
-                <div class="v659_1133"></div>
-                <div class="v659_1134"></div>
-                <div class="v659_1135"></div>
-                <div class="v659_1136"></div>
-                <div class="v659_1137"></div>
-            </div>
-        </div>
+        <div class="v659_1130"></div>
         <div id= "toilets" class="v659_2114">
             <div class="v659_1066">
                 <div class="v659_1067">
@@ -187,76 +171,28 @@
                 </div><span class="v659_1075">화장실</span>
             </div>
             <div class="v659_1076">
-                <div class="v659_1077">
-                    <div class="v659_1078"></div>
-                    <div class="v659_1079"></div>
-                    <div class="v659_1080">
-                        <div class="v659_1081"></div>
-                        <div class="v659_1082"></div>
-                        <div class="v659_1083"></div>
-                        <div class="v659_1084"></div>
-                    </div>
-                </div><span class="v659_1085">화장실</span>
+                <div class="v659_1077"></div>
+                <span class="v659_1085">화장실</span>
             </div>
             <div class="v659_1086">
-                <div class="v659_1087">
-                    <div class="v659_1088"></div>
-                    <div class="v659_1089"></div>
-                    <div class="v659_1090">
-                        <div class="v659_1091"></div>
-                        <div class="v659_1092"></div>
-                        <div class="v659_1093"></div>
-                        <div class="v659_1094"></div>
-                    </div>
-                </div><span class="v659_1095">화장실</span>
+                <div class="v659_1087"></div>
+                <span class="v659_1095">화장실</span>
             </div>
             <div class="v659_1096">
-                <div class="v659_1097">
-                    <div class="v659_1098"></div>
-                    <div class="v659_1099"></div>
-                    <div class="v659_1100">
-                        <div class="v659_1101"></div>
-                        <div class="v659_1102"></div>
-                        <div class="v659_1103"></div>
-                        <div class="v659_1104"></div>
-                    </div>
-                </div><span class="v659_1105">화장실</span>
+                <div class="v659_1097"></div>
+                <span class="v659_1105">화장실</span>
             </div>
             <div class="v659_1141">
-                <div class="v659_1144">
-                    <div class="v659_1142"></div>
-                    <div class="v659_1143"></div>
-                    <div class="v659_2134">
-                        <div class="v659_1145"></div>
-                        <div class="v659_1146"></div>
-                        <div class="v659_1147"></div>
-                        <div class="v659_1148"></div>
-                    </div>
-                </div><span class="v659_1149">화장실</span>
+                <div class="v659_1144"></div>
+                <span class="v659_1149">화장실</span>
             </div>
             <div class="v659_1150">
-                <div class="v659_1151">
-                    <div class="v659_1152"></div>
-                    <div class="v659_1153"></div>
-                    <div class="v659_1154">
-                        <div class="v659_1155"></div>
-                        <div class="v659_1156"></div>
-                        <div class="v659_1157"></div>
-                        <div class="v659_1158"></div>
-                    </div>
-                </div><span class="v659_1159">화장실</span>
+                <div class="v659_1151"></div>
+                <span class="v659_1159">화장실</span>
             </div>
             <div class="v659_1161">
-                <div class="v659_1162">
-                    <div class="v659_1163"></div>
-                    <div class="v659_1164"></div>
-                    <div class="v659_1165">
-                        <div class="v659_1166"></div>
-                        <div class="v659_1167"></div>
-                        <div class="v659_1168"></div>
-                        <div class="v659_1169"></div>
-                    </div>
-                </div><span class="v659_1170">화장실</span>
+                <div class="v659_1162"></div>
+                <span class="v659_1170">화장실</span>
             </div>
         </div>
         <div id="stages" class="v659_2113">
@@ -286,6 +222,24 @@
             <div class="v659_1189">
                 <div class="v659_1190"></div>
                 <span class="v659_1191">BRIGHT LAB</span>
+            </div>
+        </div>
+        <div class="v659_1332">
+            <div class="v659_1331"></div>
+            <div class="v659_1333"></div>
+            <div class="v659_1334">
+                <div class="v659_1335"></div>
+                <span class="v659_1336">오늘 더 이상 보지 않기</span>
+            </div>
+            <span class="v659_1337">안내되는 혼잡도는 실제 현장 상황과
+                차이가 있을 수 있습니다.
+                이 점 유의하시어 공연 및 부가시설
+                이용 부탁드립니다.</span>
+            <div onclick="alertClick()" class="v659_1338" style="cursor: pointer">
+                <span class="v659_1340">확인</span>
+                <div class="v659_1341">
+                    <div class="v659_1342"></div>
+                </div>
             </div>
         </div>
     </div>
