--- a/templates/map_view_info.html
+++ b/templates/map_view_info.html
@@ -5,7 +5,8 @@
     <link href="https://fonts.googleapis.com/css?family=Pretendard&display=swap" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" />
     <title>map view info</title>
-    <style> /* progress bar style */
+    <!-- progress bar style -->
+    <style>
         .progress-container {
             display: flex;
             align-items: center;
@@ -98,7 +99,7 @@
         </div>
         <a href="/map_view">
             <div class="v659_938" style="cursor: pointer">
-                <div class="v659_939"></div>
+                <!-- <div class="v659_939"></div> -->
             </div>
         </a>
         <div class="v659_940">
