--- a/templates/map_view.html
+++ b/templates/map_view.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Pretendard&display=swap" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" />
     <title>Document</title>
